Hledaci endpoint vehicles/search a rozpracovane Records
